# best-of-n-video-transformer-world-model

./: .gitignore  README.md  pyproject.toml  requirements.txt  sitecustomize.py
counterfactual_video_audit/: __init__.py
docs/: claims.md  differentiation_from_best_of_n_wam.md  differentiation_from_prior_projects.md  differentiation_from_wam.md  final_audit.md  reviewer_attacks.md  theory.md
experiments/: __init__.py  common.py  exact_law_validation.py  experiment_expansion_suite.py  experiment_learned_video_transformer.py  experiment_moving_mnist_benchmark.py  experiment_occlusion_stress.py  experiment_video_best_of_n_failure.py  experiment_video_diagnostics.py  experiment_video_repairs.py  experiment_video_tail_failure.py  multiseed_evidence.py
paper/: abstract.md  build_submission.ps1  build_submission.sh  checklist.md  experiments.md  intro.md  limitations.md  main.tex  method.md  references.bib  related_work.md  theory.md
results/: claims_status.json  claims_status.md  exact_law_validation.json  experiment_learned_video_transformer.json  experiment_occlusion_stress.json  experiment_video_best_of_n_failure.json  experiment_video_diagnostics.json  experiment_video_repairs.json  learned_tiny_video_transformer.pt  multiseed_strong_evidence.json
scripts/: run_all.sh  run_claim_audit.py  run_claim_audit.sh  run_smoke.sh  run_suite.py
tests/: test_claims_and_docs.py  test_envs_candidates.py  test_expansion_suite.py  test_experiment_smoke_helpers.py  test_model.py  test_moving_mnist_benchmark.py  test_scorers_diagnostics_gate.py  test_theory.py
(+42 files in other folders)
